--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      # Node.js build flow
       - name: Setup Node.js
         if: inputs.language == 'node'
         uses: actions/setup-node@v4
@@ -43,6 +44,7 @@ jobs:
         if: inputs.language == 'node'
         run: npm run build
 
+      # Java build flow
       - name: Setup Java
         if: inputs.language == 'java'
         uses: actions/setup-java@v4
@@ -54,10 +56,14 @@ jobs:
         if: inputs.language == 'java'
         run: mvn clean install -DskipTests
 
+      - name: Debug target folder
+        if: inputs.language == 'java'
+        run: ls -la target/
+
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
           name: build-artifact
           path: |
-            dist/
-            target/
+            ${{ inputs.working-directory }}/target/
+            ${{ inputs.working-directory }}/dist/
